--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="container">
           <h2 class="visually-hidden">Наши преимущества</h2>
           <ul class="our-benefits-list">
-            <li class="our-benefits-item">
+            <li class="our-benefits-item antenna">
               <h3>Внимание к деталям</h3>
               <p>
                 Идейные соображения, а также <br />
@@ -54,7 +54,7 @@
                 формированию позиции.
               </p>
             </li>
-            <li class="our-benefits-item">
+            <li class="our-benefits-item clock">
               <h3>Пунктуальность</h3>
               <p>
                 Задача организации, в особенности <br />
@@ -62,7 +62,7 @@
                 влечет за собой.
               </p>
             </li>
-            <li class="our-benefits-item">
+            <li class="our-benefits-item diagram">
               <h3>Планирование</h3>
               <p>
                 Равным образом консультация с <br />
@@ -70,7 +70,7 @@
                 степени обуславливает.
               </p>
             </li>
-            <li class="our-benefits-item">
+            <li class="our-benefits-item austranaut">
               <h3>Современные технологии</h3>
               <p>
                 Значимость этих проблем настолько <br />
