--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
         </div>
       </section>
       <!-- _____________Чем мы занимаемся _____________-->
-      <section class="our-team">
+      <section class="basic-section">
         <div class="container">
-          <h2>Чем мы занимаемся</h2>
+          <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="what-we-do-list">
             <li>
               <img src="./images/box1.jpg" width="370" alt="Планшет" />
@@ -103,9 +103,9 @@
         </div>
       </section>
       <!-- ____________Наша команда_____________________ -->
-      <section class="our-team">
+      <section class="basic-section">
         <div class="container">
-          <h2>Наша команда</h2>
+          <h2 class="section-title">Наша команда</h2>
           <ul class="our-team-list">
             <li>
               <img
@@ -131,6 +131,22 @@
               <h4>Михаил Ермаков</h4>
               <p>UI Designer</p>
             </li>
+          </ul>
+        </div>
+      </section>
+      <!-- _______________________Постоянные клиенты _____________________ -->
+      <section class="basic-section">
+        <div class="container">
+          <h2 class="section-title">Постоянные клиенты</h2>
+          <ul>
+            <li>
+              <a href="#"> </a>
+            </li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
           </ul>
         </div>
       </section>
