--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="header-nav">
           <a class="logo" href="./index.html"><span>Web</span>Studio</a>
           <ul class="header-list">
-            <li><a class="link" href="./index.html">Студия</a></li>
+            <li><a class="link current" href="./index.html">Студия</a></li>
             <li><a class="link" href="./index2.html">Портфолио</a></li>
             <li><a class="link" href="">Контакты</a></li>
           </ul>
@@ -138,15 +138,45 @@
       <section class="basic-section">
         <div class="container">
           <h2 class="section-title">Постоянные клиенты</h2>
-          <ul>
-            <li>
-              <a href="#"> </a>
+          <ul class="clients-list">
+            <li class="clients-link">
+              <a href="#">
+                <svg class="icon-logo">
+                  <use href="./images/symbol-defs.svg#icon-logo1"></use>
+                </svg>
+              </a>
             </li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
+            <li class="clients-link">
+              <a href="#">
+                <svg class="icon-logo">
+                  <use href="./images/symbol-defs.svg#icon-logo2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-link">
+              <a href="#"
+                ><svg class="icon-logo">
+                  <use href="./images/symbol-defs.svg#icon-logo3"></use></svg
+              ></a>
+            </li>
+            <li class="clients-link">
+              <a href="#"
+                ><svg class="icon-logo">
+                  <use href="./images/symbol-defs.svg#icon-logo4"></use></svg
+              ></a>
+            </li>
+            <li class="clients-link">
+              <a href="#"
+                ><svg class="icon-logo">
+                  <use href="./images/symbol-defs.svg#icon-logo5"></use></svg
+              ></a>
+            </li>
+            <li class="clients-link">
+              <a href="#"
+                ><svg class="icon-logo">
+                  <use href="./images/symbol-defs.svg#icon-logo6"></use></svg
+              ></a>
+            </li>
           </ul>
         </div>
       </section>
