--- a/index2.html
+++ b/index2.html
@@ -23,7 +23,7 @@
           <a class="logo" href="./index.html"><span>Web</span>Studio</a>
           <ul class="header-list">
             <li><a class="link" href="./index.html">Студия</a></li>
-            <li><a class="link" href="./index2.html">Портфолио</a></li>
+            <li><a class="link current" href="./index2.html">Портфолио</a></li>
             <li><a class="link" href="">Контакты</a></li>
           </ul>
         </nav>
