--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
           <h2 class="visually-hidden">Наши преимущества</h2>
           <ul class="our-benefits-list">
             <li class="our-benefits-item antenna">
+              <div class="background">
+                <svg width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-antenna1"></use>
+                </svg>
+              </div>
               <h3>Внимание к деталям</h3>
               <p>
                 Идейные соображения, а также <br />
@@ -55,6 +60,12 @@
               </p>
             </li>
             <li class="our-benefits-item clock">
+              <div class="background">
+                <svg width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-clock1"></use>
+                </svg>
+              </div>
+
               <h3>Пунктуальность</h3>
               <p>
                 Задача организации, в особенности <br />
@@ -63,6 +74,11 @@
               </p>
             </li>
             <li class="our-benefits-item diagram">
+              <div class="background">
+                <svg width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-diagram1"></use>
+                </svg>
+              </div>
               <h3>Планирование</h3>
               <p>
                 Равным образом консультация с <br />
@@ -71,6 +87,11 @@
               </p>
             </li>
             <li class="our-benefits-item austranaut">
+              <div class="background">
+                <svg width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-astronaut1"></use>
+                </svg>
+              </div>
               <h3>Современные технологии</h3>
               <p>
                 Значимость этих проблем настолько <br />
@@ -103,7 +124,7 @@
         </div>
       </section>
       <!-- ____________Наша команда_____________________ -->
-      <section class="basic-section">
+      <section class="basic-section team">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="our-team-list">
@@ -141,7 +162,7 @@
           <ul class="clients-list">
             <li class="clients-link">
               <a href="#">
-                <svg class="icon-logo">
+                <svg width="44" height="49" class="icon-logo">
                   <use href="./images/symbol-defs.svg#icon-logo1"></use>
                 </svg>
               </a>
