--- a/index.html
+++ b/index.html
@@ -27,10 +27,17 @@
           </ul>
         </nav>
         <address class="header-address">
-          <a class="contacts" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
+          <a class="contacts" href="mailto:info@devstudio.com">
+            <svg width="16" height="12">
+              <use href="./images/symbol-defs.svg#icon-envelope"></use>
+            </svg>
+            info@devstudio.com</a
           >
-          <a class="contacts" href="call:+380961111111">+38 096 111 11 11</a>
+          <a class="contacts" href="call:+380961111111"
+            ><svg width="10" height="16">
+              <use href="./images/symbol-defs.svg#icon-smartphone"></use></svg
+            >+38 096 111 11 11</a
+          >
         </address>
       </div>
     </header>
@@ -161,40 +168,40 @@
           <h2 class="section-title">Постоянные клиенты</h2>
           <ul class="clients-list">
             <li class="clients-link">
-              <a href="#">
-                <svg width="44" height="49" class="icon-logo">
+              <a class="icon-logo" href="#">
+                <svg width="44" height="49">
                   <use href="./images/symbol-defs.svg#icon-logo1"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-link">
-              <a href="#">
-                <svg class="icon-logo">
+              <a class="icon-logo" href="#">
+                <svg width="40" height="52">
                   <use href="./images/symbol-defs.svg#icon-logo2"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-link">
-              <a href="#"
-                ><svg class="icon-logo">
+              <a class="icon-logo" href="#"
+                ><svg width="41" height="43">
                   <use href="./images/symbol-defs.svg#icon-logo3"></use></svg
               ></a>
             </li>
             <li class="clients-link">
-              <a href="#"
-                ><svg class="icon-logo">
+              <a class="icon-logo" href="#"
+                ><svg width="80" height="42">
                   <use href="./images/symbol-defs.svg#icon-logo4"></use></svg
               ></a>
             </li>
             <li class="clients-link">
-              <a href="#"
-                ><svg class="icon-logo">
+              <a class="icon-logo" href="#"
+                ><svg width="59" height="47">
                   <use href="./images/symbol-defs.svg#icon-logo5"></use></svg
               ></a>
             </li>
             <li class="clients-link">
-              <a href="#"
-                ><svg class="icon-logo">
+              <a class="icon-logo" href="#"
+                ><svg width="88" height="45">
                   <use href="./images/symbol-defs.svg#icon-logo6"></use></svg
               ></a>
             </li>
