--- a/index.html
+++ b/index.html
@@ -143,21 +143,141 @@
               />
               <h4>Игорь Демьяненко</h4>
               <p>Product Designer</p>
+              <ul class="social-network-list">
+                <li>
+                  <a class="social-network-item" href="#">
+                    <svg class="social-network-logo">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="social-network-item" href="#">
+                    <svg class="social-network-logo">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="social-network-item" href="#">
+                    <svg class="social-network-logo">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="social-network-item" href="#">
+                    <svg class="social-network-logo">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li>
               <img src="./images/face2.jpg" width="270" alt="Ольга Репина" />
               <h4>Ольга Репина</h4>
               <p>Frontend Developer</p>
+              <ul class="social-network-list">
+                <li>
+                  <a class="social-network-item" href="#">
+                    <svg class="social-network-logo">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="social-network-item" href="#">
+                    <svg class="social-network-logo">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="social-network-item" href="#">
+                    <svg class="social-network-logo">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="social-network-item" href="#">
+                    <svg class="social-network-logo">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li>
               <img src="./images/face3.jpg" width="270" alt="Николай Тарасов" />
               <h4>Николай Тарасов</h4>
               <p>Marketing</p>
+              <ul class="social-network-list">
+                <li>
+                  <a class="social-network-item" href="#">
+                    <svg class="social-network-logo">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="social-network-item" href="#">
+                    <svg class="social-network-logo">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="social-network-item" href="#">
+                    <svg class="social-network-logo">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="social-network-item" href="#">
+                    <svg class="social-network-logo">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li>
               <img src="./images/face4.jpg" width="270" alt="Михаил Ермаков" />
               <h4>Михаил Ермаков</h4>
               <p>UI Designer</p>
+              <ul class="social-network-list">
+                <li>
+                  <a class="social-network-item" href="#">
+                    <svg class="social-network-logo">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="social-network-item" href="#">
+                    <svg class="social-network-logo">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="social-network-item" href="#">
+                    <svg class="social-network-logo">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="social-network-item" href="#">
+                    <svg class="social-network-logo">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
