--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@500;700;900&display=fallback"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=fallback"
       rel="stylesheet"
     />
     <link
@@ -115,17 +115,30 @@
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="what-we-do-list">
             <li>
-              <img src="./images/box1.jpg" width="370" alt="Планшет" />
+              <div class="thumb">
+                <img src="./images/box1.jpg" width="370" alt="Планшет" />
+                <p class="h3">Десктопные решения</p>
+              </div>
             </li>
             <li>
-              <img src="./images/box2.jpg" width="370" alt="Мобильный дизайн" />
+              <div class="thumb">
+                <img
+                  src="./images/box2.jpg"
+                  width="370"
+                  alt="Мобильные приложения"
+                />
+                <p class="h3">Мобильный дизайн</p>
+              </div>
             </li>
             <li>
-              <img
-                src="./images/box3.jpg"
-                width="370"
-                alt="Дизайнерские решения"
-              />
+              <div class="thumb">
+                <img
+                  src="./images/box3.jpg"
+                  width="370"
+                  alt="Дизайнерские решения"
+                />
+                <p class="h3">Дизайнерские решения</p>
+              </div>
             </li>
           </ul>
         </div>
