--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=fallback"
       rel="stylesheet"
     />
     <link
@@ -67,86 +67,97 @@
           <div>
             <ul class="portfolio-list">
               <li>
-                <a href=""
-                  ><img src="./images/example_1.jpg" alt="Страница веб-сайта" />
+                <a class="portfolio-link" href="#">
+                  <div class="portfolio-thumb">
+                    <img
+                      src="./images/example_1.jpg"
+                      alt="Страница веб-сайта"
+                    />
+                    <p class="legend">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                   <div class="portfolio-describtion">
                     <h2>Технокряк</h2>
-                    <p>Веб-сайт</p>
+                    <p class="portfolio-title">Веб-сайт</p>
                   </div>
                 </a>
               </li>
               <li>
-                <a href=""
+                <a class="portfolio-link" href=""
                   ><img src="./images/example_2.jpg" alt="Постер-обложка" />
                   <div class="portfolio-describtion">
                     <h2>Постер New Orlean vs Golden Star</h2>
-                    <p>Дизайн</p>
+                    <p class="portfolio-title">Дизайн</p>
                   </div>
                 </a>
               </li>
               <li>
-                <a href=""
+                <a class="portfolio-link" href=""
                   ><img src="./images/example_3.jpg" alt="Логотип ресторана" />
                   <div class="portfolio-describtion">
                     <h2>Ресторан Seafood</h2>
-                    <p>Приложение</p>
+                    <p class="portfolio-title">Приложение</p>
                   </div>
                 </a>
               </li>
               <li>
-                <a href=""
+                <a class="portfolio-link" href=""
                   ><img src="./images/example_4.jpg" alt="Наушники" />
                   <div class="portfolio-describtion">
                     <h2>Проект Prime</h2>
-                    <p>Маркетинг</p>
+                    <p class="portfolio-title">Маркетинг</p>
                   </div>
                 </a>
               </li>
               <li>
-                <a href=""
+                <a class="portfolio-link" href=""
                   ><img src="./images/example_5.jpg" alt="Макет коробки" />
                   <div class="portfolio-describtion">
                     <h2>Проект Boxes</h2>
-                    <p>Приложение</p>
+                    <p class="portfolio-title">Приложение</p>
                   </div>
                 </a>
               </li>
               <li>
-                <a href=""
+                <a class="portfolio-link" href=""
                   ><img
                     src="./images/example_6.jpg"
                     alt="Дизайн веб-страницы"
                   />
                   <div class="portfolio-describtion">
                     <h2>Inspiration has no Borders</h2>
-                    <p>Веб-сайт</p>
+                    <p class="portfolio-title">Веб-сайт</p>
                   </div>
                 </a>
               </li>
               <li>
-                <a href=""
+                <a class="portfolio-link" href=""
                   ><img src="./images/example_7.jpg" alt="Дизайн книги" />
                   <div class="portfolio-describtion">
                     <h2>Издание Limited Edition</h2>
-                    <p>Дизайн</p>
+                    <p class="portfolio-title">Дизайн</p>
                   </div>
                 </a>
               </li>
               <li>
-                <a href=""
+                <a class="portfolio-link" href=""
                   ><img src="./images/example_8.jpg" alt="Бирка" />
                   <div class="portfolio-describtion">
                     <h2>Проект LAB</h2>
-                    <p>Маркетинг</p>
+                    <p class="portfolio-title">Маркетинг</p>
                   </div>
                 </a>
               </li>
               <li>
-                <a href=""
+                <a class="portfolio-link" href=""
                   ><img src="./images/example_9.jpg" alt="Веб-приложение" />
                   <div class="portfolio-describtion">
                     <h2>Growing Business</h2>
-                    <p>Приложение</p>
+                    <p class="portfolio-title">Приложение</p>
                   </div>
                 </a>
               </li>
