--- a/index2.html
+++ b/index2.html
@@ -87,8 +87,17 @@
                 </a>
               </li>
               <li>
-                <a class="portfolio-link" href=""
-                  ><img src="./images/example_2.jpg" alt="Постер-обложка" />
+                <a class="portfolio-link" href="#">
+                  <div class="portfolio-thumb">
+                    <img src="./images/example_2.jpg" alt="Постер-обложка" />
+                    <p class="legend">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+
                   <div class="portfolio-describtion">
                     <h2>Постер New Orlean vs Golden Star</h2>
                     <p class="portfolio-title">Дизайн</p>
@@ -96,8 +105,17 @@
                 </a>
               </li>
               <li>
-                <a class="portfolio-link" href=""
-                  ><img src="./images/example_3.jpg" alt="Логотип ресторана" />
+                <a class="portfolio-link" href="">
+                  <div class="portfolio-thumb">
+                    <img src="./images/example_3.jpg" alt="Логотип ресторана" />
+                    <p class="legend">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+
                   <div class="portfolio-describtion">
                     <h2>Ресторан Seafood</h2>
                     <p class="portfolio-title">Приложение</p>
@@ -105,8 +123,16 @@
                 </a>
               </li>
               <li>
-                <a class="portfolio-link" href=""
-                  ><img src="./images/example_4.jpg" alt="Наушники" />
+                <a class="portfolio-link" href="#">
+                  <div class="portfolio-thumb">
+                    <img src="./images/example_4.jpg" alt="Наушники" />
+                    <p class="legend">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                   <div class="portfolio-describtion">
                     <h2>Проект Prime</h2>
                     <p class="portfolio-title">Маркетинг</p>
@@ -114,8 +140,17 @@
                 </a>
               </li>
               <li>
-                <a class="portfolio-link" href=""
-                  ><img src="./images/example_5.jpg" alt="Макет коробки" />
+                <a class="portfolio-link" href="">
+                  <div class="portfolio-thumb">
+                    <img src="./images/example_5.jpg" alt="Макет коробки" />
+                    <p class="legend">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+
                   <div class="portfolio-describtion">
                     <h2>Проект Boxes</h2>
                     <p class="portfolio-title">Приложение</p>
@@ -123,11 +158,20 @@
                 </a>
               </li>
               <li>
-                <a class="portfolio-link" href=""
-                  ><img
-                    src="./images/example_6.jpg"
-                    alt="Дизайн веб-страницы"
-                  />
+                <a class="portfolio-link" href="">
+                  <div class="portfolio-thumb">
+                    <img
+                      src="./images/example_6.jpg"
+                      alt="Дизайн веб-страницы"
+                    />
+                    <p class="legend">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+
                   <div class="portfolio-describtion">
                     <h2>Inspiration has no Borders</h2>
                     <p class="portfolio-title">Веб-сайт</p>
@@ -135,8 +179,17 @@
                 </a>
               </li>
               <li>
-                <a class="portfolio-link" href=""
-                  ><img src="./images/example_7.jpg" alt="Дизайн книги" />
+                <a class="portfolio-link" href="">
+                  <div class="portfolio-thumb">
+                    <img src="./images/example_7.jpg" alt="Дизайн книги" />
+                    <p class="legend">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+
                   <div class="portfolio-describtion">
                     <h2>Издание Limited Edition</h2>
                     <p class="portfolio-title">Дизайн</p>
@@ -144,8 +197,17 @@
                 </a>
               </li>
               <li>
-                <a class="portfolio-link" href=""
-                  ><img src="./images/example_8.jpg" alt="Бирка" />
+                <a class="portfolio-link" href="">
+                  <div class="portfolio-thumb">
+                    <img src="./images/example_8.jpg" alt="Бирка" />
+                    <p class="legend">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+
                   <div class="portfolio-describtion">
                     <h2>Проект LAB</h2>
                     <p class="portfolio-title">Маркетинг</p>
@@ -153,8 +215,17 @@
                 </a>
               </li>
               <li>
-                <a class="portfolio-link" href=""
-                  ><img src="./images/example_9.jpg" alt="Веб-приложение" />
+                <a class="portfolio-link" href="">
+                  <div class="portfolio-thumb">
+                    <img src="./images/example_9.jpg" alt="Веб-приложение" />
+                    <p class="legend">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+
                   <div class="portfolio-describtion">
                     <h2>Growing Business</h2>
                     <p class="portfolio-title">Приложение</p>
