--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <ul class="header-list">
             <li><a class="link current" href="./index.html">Студия</a></li>
             <li><a class="link" href="./index2.html">Портфолио</a></li>
-            <li><a class="link" href="">Контакты</a></li>
+            <li><a class="link" href="#">Контакты</a></li>
           </ul>
         </nav>
         <address class="header-address">
