--- a/index2.html
+++ b/index2.html
@@ -69,16 +69,18 @@
               <li>
                 <a class="portfolio-link" href="#">
                   <div class="portfolio-thumb">
-                    <img
-                      src="./images/example_1.jpg"
-                      alt="Страница веб-сайта"
-                    />
-                    <p class="legend">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
-                    </p>
+                    <div class="portfolio-overlay">
+                      <img
+                        src="./images/example_1.jpg"
+                        alt="Страница веб-сайта"
+                      />
+                      <p class="legend">
+                        Технокряк это современная площадка распространения
+                        коронавируса. Компании используют эту платформу для
+                        цифрового шпионажа и атак на защищённые сервера
+                        конкурентов.
+                      </p>
+                    </div>
                   </div>
                   <div class="portfolio-describtion">
                     <h2>Технокряк</h2>
